# build_system

./: CMakeLists.txt  PostInstall.cmake  README.md
core/: CMakeLists.txt
core/busybox/: CMakeLists.txt
core/filesystem/: CMakeLists.txt
core/filesystem/initramfs/: init
core/filesystem/iso/boot/grub/: grub.cfg
core/kernel/: CMakeLists.txt
features/: CMakeLists.txt
platform/: .gitignore  CMakeLists.txt
